--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
             <div class="container"> 
                 <div class="row">
                     <div class="col-md-7 landing-section-firstContent">
-                        <h2 class="ct-sectionHeader--type2">Validation of morphological analysis software <small>PAYAMAN</small></h2>
+                        <h2 class="ct-sectionHeader--type2">Validation of morphological analysis software <small></small></h2>
                         <div id="article-main-content2">
                             <div class="row">
                                 <div class="col-lg-6 col-lg-push-6 text-center-tablet text-center">
