--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,9 +11,8 @@
                                     <img alt="VMAS" src="https://www.solodev.com/assets/landing-page/mobile-app-graphic.png">
                                 </div>
                                 <div class="col-lg-6 col-lg-pull-6">
-                                    <p class="ct-u-paddingBottom20">Alright kasi LSA is a type of assessment that plays a huge role olin our profession.</p>
-                                    <p class="ct-u-paddingBottom20">The upper batch made a protocol that allows classification of utterances and can make it easier for us to understand a patients skills in terms of speech. </p>
-                                    <p class="ct-u-paddingBottom30">However its limited to manual transcription as in hand written lahat. So our aim or at least the thesis is to automate that hence the software</p>
+                                    <p class="ct-u-paddingBottom20">This is a software that allows for easy translation, categorization, and classification of words in a text document!
+                                    <p class="ct-u-paddingBottom20"> It can also count and tally words and morphemes with just a push of a button!</p>
                                 </div>
                             </div>
                         </div>
