--- a/src/styles.css
+++ b/src/styles.css
@@ -1,227 +1,136 @@
-.ct-sectionHeader--type2 {
-font-family: 'Open Sans', sans-serif;
-font-size: 38px;
-color: #2483c3;
-font-weight: 700;
-padding-bottom: 30px;
-margin-bottom: 30px;
-margin-top: 0;
-position: relative;
+@import url('https://fonts.googleapis.com/css?family=Bungee&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap');
+
+body {
+  background-image: url('/assets/images/bg.jpg');
 }
-.ct-sectionHeader--type2 small {
-font-family: 'Open Sans', sans-serif;
-font-size: 21.17px;
-padding-top: 10px;
-color: #231f20;
-display: block;
+
+.title {
+  font-family: 'Bungee', cursive;
+  font-size: 40px;
+  margin-top: 30px;
+
+  font-weight: bold;
+  color: #56bfdf;
+  width: 100%;
 }
-.terms-wrapper {
-margin-top: 20px;
+
+.sub-desc {
+  font-family: 'Roboto', monospace;
+  margin-left: 5%;
+  color: #56bfdf;
+  width: 50%;
 }
-.ct-sectionHeader--type2:after {
-content: '';
-width: 100%;
-max-width: 354px;
-background-color: #e1e1e1;
-height: 2px;
-position: absolute;
-bottom: 0;
-left: 0;
+
+.topImage {
+  position: fixed;
+  max-width: 70%;
+  top: -30%;
+  left: 30.5%;
+  bottom: 0;
 }
-.ct-feature_list-header {
-font-size: 20px;
-color: #2294a2;
-font-weight: 700;
-font-style: italic;
-padding-bottom: 15px;
-font-family: 'Open Sans', sans-serif;
-padding-left: 28px;
+
+.rightTopImage {
+  position: fixed;
+  max-width: 55%;
+  left: 77%;
+  top: -11%;
 }
-.ct-feature_list {
-display: inline-block;
+
+.mobile-app .form-title {
+  text-transform: uppercase;
+  position: relative;
+  margin-left: 77%;
+  top: 60%;
+  font-family: 'Roboto Mono', monospace;
 }
-ul {
-list-style-type: none;
-margin: 0;
-padding: 0;
+
+.custome-file-input {
+  position: absolute;
+  right: -10%;
+  bottom: -100%;
+  border: 1px solid black;
+  border-radius: 5px;
 }
-.ct-feature_list li {
-text-align: left;
-}
-.ct-feature_list li {
-position: relative;
-padding-left: 30px;
-font-weight: 700;
-}
-.ct-feature_list li:before {
-content: '';
-position: absolute;
-top: 50%;
-margin-top: -11px;
-left: 0;
-width: 19px;
-height: 19px;
-/* background-image: url('../images/Check2.png'); */
-background-repeat: no-repeat;
-background-position: center;
-z-index: 1;
-}
-.ct-feature_list li {
-text-align: left;
-}
-.ct-feature_list li {
-position: relative;
-padding-left: 30px;
-font-weight: 700;
-}
-.mobile-app-column {
-background-color: #f2f5f8;
-}
-div.mobile-app {
-border-top: 8px solid #b0d44b;
-padding: 45px 0px;
-}
-div.mobile-app {
-display: block;
-width: 100%;
-border-radius: 0;
-padding: 0 0 0 10px;
-background-color: #f2f5f8;
-}
-div.mobile-app .form-group label, div.form-request .form-group label {
-font-size: 15.58px;
-font-weight: 400;
-line-height: 0.9;
-font-family: 'Open Sans', sans-serif;
-}
-.btn.btn-motive {
-cursor: pointer;
-}
-.btn.btn-motive {
-background-color: #33a6f3;
-color: #fff;
--webkit-transition: all 0.3s ease;
-transition: all 0.3s ease;
-}
-.btn.btn-large {
-font-size: 25px;
-font-family: 'Open Sans', sans-serif;
-padding: 16px 50px;
-margin-bottom: 30px;
-}
-.btn {
-font-family: 'Open Sans', sans-serif;
-font-size: 22px;
-font-weight: 600;
-padding: 12px 35px;
-border-radius: 0;
-text-transform: uppercase;
-letter-spacing: -0.5px;
-}
-div.mobile-app .checkbox label .checkbox-box {
-background-color: #252525;
-border-radius: 5px;
-color: white;
-content: '';
-display: inline-block;
-font-size: 0px;
-height: 20px;
-padding: 0;
-position: relative;
-top: 1px;
-width: 20px;
-}
-div.mobile-app .checkbox label span {
-color: #5c5d5f;
-font-size: 17px;
-padding-left: 10px;
-position: relative;
-font-family: 'Open Sans', sans-serif;
-}
-p {
-font-family: 'Open Sans', sans-serif;
-}
-div.mobile-app .checkbox {
-padding-top: 20px;
-text-align: center; 
-}
-.form-title {
-margin-bottom: 30px;
-margin-right: 30px;
-margin-left: 30px;
-}
-.ct-u-paddingBottom30 {
-margin-bottom: 30px;
-}
-.form-group {
-margin-bottom: 30px;
-margin-right: 30px;
-margin-left: 30px;
-}
-div.mobile-app .form-group label, div.form-request .form-group label {
-font-size: 15.58px;
-font-weight: 400;
-line-height: 0.9;
-font-family: 'Open Sans', sans-serif;
-}
-img {
-margin-bottom: 30px;
-margin-top: 30px;
+
+.button_cont {
+  position: relative;
+  right: -100%;
+
+  max-width: 100px;
+  top: 10px;
 }
 
 .submit_button {
-    background: #f15d22;
-	 border: none;
-	 border-radius: 5px;
-	 color: #fff;
-	 cursor: pointer;
-	 display: inline-block;
-	 font-family: 'Poppins', sans-serif;
-	 font-size: inherit;
-	 font-weight: 600;
-	 margin-bottom: 1rem;
-	 outline: none;
-	 padding: 1rem 50px;
-	 position: relative;
-	 transition: all 0.3s;
-     vertical-align: middle;
-     background-color: #145389;
-	 box-shadow: 0 6px #517AA8;
-	 transition: none;
+  font-size: 10px;
+  text-transform: uppercase;
+  background-color: #56bfdf;
+  color: white;
+  padding: 10px 20px;
 }
-.submit_button:hover {
-    box-shadow: 0 4px #74D4FA;
-	 top: 2px;
+
+.files {
+  position: absolute;
+  max-width: 4%;
+  left: 68.5%;
+  bottom: 50%;
 }
-[type="file"] {
-	 height: 0;
-	 overflow: hidden;
-	 width: 0;
+
+/* Footer */
+.testimony {
+  margin-left: 15%;
+  bottom: 25%;
+  position: absolute;
 }
- [type="file"] + label {
-	 background: #f15d22;
-	 border: none;
-	 border-radius: 5px;
-	 color: #fff;
-	 cursor: pointer;
-	 display: inline-block;
-	 font-family: 'Poppins', sans-serif;
-	 font-size: inherit;
-	 font-weight: 600;
-	 margin-bottom: 1rem;
-	 outline: none;
-	 padding: 1rem 50px;
-	 position: relative;
-	 transition: all 0.3s;
-	 vertical-align: middle;
+
+.boy-testimony {
+  position: absolute;
+  width: 10%;
+  top: 75.5%;
+  left: 150px;
 }
- [type="file"] + label.btn-1 {
-	 background-color: #145389;
-	 box-shadow: 0 6px #517AA8;
-	 transition: none;
+
+.girl-testimony {
+  position: absolute;
+  width: 12%;
+  top: 75%;
+  left: 320px;
 }
- [type="file"] + label.btn-1:hover {
-	 box-shadow: 0 4px #74D4FA;
-	 top: 2px;
+
+.straight-dots {
+  position: fixed;
+  max-width: 25%;
+  left: 69.5%;
+  top: 55%;
 }
- 
+
+.dotted {
+  max-width: 22%;
+  position: absolute;
+  left: 50%;
+  bottom: 12%;
+}
+
+.directory {
+  background-image: url('/assets/images/directory.png');
+  background-repeat: no-repeat;
+  height: 13%;
+  width: 6.5%;
+  margin-left: 89%;
+  margin-top: 8%;
+  border: none;
+}
+
+.sun {
+  position: fixed;
+  max-width: 22%;
+  left: 57%;
+  top: 83%;
+}
+
+.blue-waves {
+  position: fixed;
+  max-width: 35%;
+  left: 80%;
+  top: 83%;
+}
