Fixed styles.css -- pls change the json

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,7 +20,7 @@
                   </div>
               </div>
             </div>
-            <aside class="col-md-5 mobile-app-column">
+            <aside class="mobile-app-column">
               <div class="mobile-app" id="formContainer2">
                 <h2 class ="form-title">Insert Text File</h2>
                 <!-- <form name="contentForm" enctype="multipart/form-data" method="post" action="/resources/case-studies/are-you-part-of-the-app-majoritya-.stml"> -->                       
