--- a/src/styles.css
+++ b/src/styles.css
@@ -5,21 +5,26 @@ body {
   background-image: url('/assets/images/bg.jpg');
 }
 
+/* i used !important so that i can override the home.componenent.css  */
+
 .title {
   font-family: 'Bungee', cursive;
-  font-size: 40px;
-  margin-top: 30px;
-
+  font-size: 40px !important;
+  margin-top: 30px !important;
+  margin-left: 0px !important;
   font-weight: bold;
   color: #56bfdf;
-  width: 100%;
+  width: 100% !important;
 }
 
 .sub-desc {
   font-family: 'Roboto', monospace;
-  margin-left: 5%;
+  font-size: 15px;
   color: #56bfdf;
-  width: 50%;
+  margin-left: 5%;
+  margin-top: 2%;
+  right: 0 !important;
+  width: 100% !important;
 }
 
 .topImage {
@@ -37,28 +42,31 @@ body {
   top: -11%;
 }
 
+.mobile-app {
+  margin-top: 21%;
+}
+
 .mobile-app .form-title {
   text-transform: uppercase;
   position: relative;
-  margin-left: 77%;
-  top: 60%;
+  margin-left: 74.5% !important;
+  margin-bottom: 2%;
   font-family: 'Roboto Mono', monospace;
 }
 
 .custome-file-input {
-  position: absolute;
-  right: -10%;
-  bottom: -100%;
+  position: absolute !important;
+  right: 4% !important;
   border: 1px solid black;
   border-radius: 5px;
 }
 
 .button_cont {
   position: relative;
-  right: -100%;
-
-  max-width: 100px;
-  top: 10px;
+  right: 1% !important;
+  float: right !important;
+  max-width: 100px !important;
+  margin-top: 2% !important;
 }
 
 .submit_button {
@@ -112,12 +120,13 @@ body {
 }
 
 .directory {
+  position: absolute;
   background-image: url('/assets/images/directory.png');
   background-repeat: no-repeat;
   height: 13%;
   width: 6.5%;
-  margin-left: 89%;
-  margin-top: 8%;
+  margin-left: 89% ;
+  margin-top: 8% ;
   border: none;
 }
 
